# NDKmol

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  HowToJNI.txt  LICENSE.txt  MainWindow.xib  Memo.txt  MolecularViewer-Info.plist  MolecularViewerViewController.xib  MolecularViewer_Prefix.pch  README-ja.txt  README.txt  SettingPanel.xib  main.m
Classes/: ChemDatabase.hpp  Color.cpp  CylinderGeometry.cpp  GLES.cpp  GLES.hpp  Geometry.hpp  Line.cpp  Line.hpp  MatRenderable.cpp  MatRenderable.hpp  Matrix.cpp  Matrix.hpp  MolecularView.h  MolecularView.mm  MolecularViewerAppDelegate.h  MolecularViewerAppDelegate.mm  MolecularViewerViewController.hh  MolecularViewerViewController.mm  NdkView.cpp  NdkView.h  Protein.cpp  Renderable.cpp  Renderable.hpp  SettingViewController.h  SettingViewController.mm  SmoothCurve.hpp  SmoothTube.cpp  SphereGeometry.hpp  VBOCylinder.cpp  VBOSphere.cpp  View.hpp
GLUT/: NDKmol.cpp  icon.xpm  ndkmol.rc
NDKmol/: CCP4Reader.cpp  CCP4Reader.hpp  ChemDatabase.cpp  ChemDatabase.hpp  Color.hpp  CylinderGeometry.cpp  CylinderGeometry.hpp  Debug.cpp  Debug.hpp  GLES.cpp  GLES.hpp  Geometry.cpp  Line.cpp  MTZreader.cpp  MTZreader.hpp  MarchingSquares.cpp  MarchingSquares.hpp  MatRenderable.cpp  MatRenderable.hpp  Matrix.cpp  Matrix.hpp  NdkView.cpp  NdkView.h  NdkView.hpp  Ndkmol.hpp  PDBReader.cpp  PDBReader.hpp  Protein.hpp  Quaternion.cpp  Quaternion.h  Renderable.cpp  Renderable.hpp  RibbonStrip.cpp  RibbonStrip.hpp  SDFReader.cpp  SDFReader.hpp  SmoothCurve.cpp  SmoothTube.cpp  SmoothTube.hpp  SphereGeometry.cpp  (+9 more)
Resources-iPad/: MainWindow-iPad.xib
jni/: Android.mk  Application.mk  Atom.cpp  Atom.h  MatRenderable.hpp  NdkView.cpp  NdkView.hpp  Ndkmol.cpp  RibbonStrip.cpp  Vector3.cpp  View.hpp
res/layout/: detailview.xml  filebrowser.xml  searcher.xml  searchertab.xml
res/menu/: filecontextmenu.xml  mainmenu.xml
res/values/: strings.xml
res/values-ja/: strings.xml
res/values-pt/: strings.xml
res/xml/: pref.xml
src/jp/sfjp/webglmol/NDKmol/: Downloader.java  FileBrowser.java  MultitouchWrapper.java  MyPreferenceActivity.java  NDKmolActivity.java  NdkView.java  PDBSearcher.java  PubChemSearcher.java  Quaternion.java  SearcherTab.java  Vector3.java
